--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,41 @@
-header img {
-    width:100px;
-    height: auto;
+header a {
+    color:black;   
+    text-decoration: none;
+    border-radius: 15px;
+}
+header a:hover{
+    background-color: aqua;
+}
+header {
+    display: flex;
+    align-items: center;
+}
+@media screen and (max-width:320px){
+    header img{
+        width: 50px;
+        height: auto;
+    }
+    header a{
+        font-size: 7.5px;
+    }
+}
+@media screen and (min-width:320px){
+    header a{
+        font-size: 10px;
+        padding: 0.5rem;
+    }
+    header img{
+        width: 60px;
+        height: auto;
+    }
+}
+@media screen and (min-width:375px) {
+    header a{
+        font-size: 15px;
+        padding:1rem;
+    }
+    header img{
+        width:100px;
+        height: auto;
+    }
 }
