--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,9 @@ header {
     header a{
         font-size: 7.5px;
     }
+        h1{
+        font-size: 25px;
+    }
 }
 @media screen and (min-width:320px){
     header a{
