--- a/public/style.css
+++ b/public/style.css
@@ -66,8 +66,22 @@ header {
     }
 }
 @media screen and (min-width:1024px){
-    
+    header a{
+        font-size: 20px;
+        padding:2rem;
+    }
+    header img{
+        width:100px;
+        height: auto;
+    }
 }
 @media screen and (min-width:1440px) {
-    
+    header a{
+        font-size: 20px;
+        padding:2rem;
+    }
+    header img{
+        width:100px;
+        height: auto;
+    }
 }
