--- a/public/style.css
+++ b/public/style.css
@@ -836,3 +836,29 @@ input:focus, textarea:focus {
 .register-link a:hover, .login-link a:hover {
     color: #000000;
 }
+
+.btn-cart {
+    position: relative;
+}
+
+.cart-counter {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: #ff4444;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 12px;
+    min-width: 16px;
+    text-align: center;
+}
+
+.register-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form-group {
+    width: 100%;
+}
